# fauth

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  example_config.yaml
api/: .gitignore  Cargo.toml
api/migrations/: 01_init.sql  01_users.sql
api/src/: admin.rs  jwt_extractor.rs  main.rs  requests.rs  types.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: Admin.tsx  App.svelte  App.tsx  CheckLogin.tsx  FloatingBox.svelte  FloatingBox.tsx  Login.svelte  Login.tsx  Spinner.tsx
